--- a/source/AdventOfCode2021/AdventOfCode2021.csproj
+++ b/source/AdventOfCode2021/AdventOfCode2021.csproj
@@ -1,9 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Day01\SonarSweep\SonarSweep.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>advent_of_code_2021</RootNamespace>
   </PropertyGroup>
 
 </Project>
