--- a/.editorconfig
+++ b/.editorconfig
@@ -20,8 +20,8 @@ csharp_new_line_before_open_brace = all
 
 #Formatting - organize using options
 
-#do not place System.* using directives before other using directives
-dotnet_sort_system_directives_first = false
+#place System.* usings first
+dotnet_sort_system_directives_first = true
 
 #Formatting - spacing options
 
